--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-testing 1, 2, 3
+---
+layout: page
+title: "SI 676 Test Site"
+permalink: https://krys-kross.github.io/test-site-1/
+---
+
+This is the homepage for my SI 676 test site.
