--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "SI 676 Test Site"
-permalink: https://krys-kross.github.io/test-site-1/
+permalink: https://krys-kross.github.io/
 ---
 
 This is the homepage for my SI 676 test site.
